[tool.poetry]
package-mode = false
name = "storm-api"
version = "0.1.0"
description = "FastAPI wrapper for Stanford STORM"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
knowledge-storm = "^1.1.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pytest-asyncio = "^1.3.0"
pytest-timeout = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"